--- a/gymbuddy-backend/package.json
+++ b/gymbuddy-backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.0",
     "mongoose": "^8.12.2",
     "nodemailer": "^6.10.0"
   }
