--- a/gymbuddy-backend/.env
+++ b/gymbuddy-backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/gymbuddy
-JWT_SECRET=yourSecretKey123
+JWT_SECRET=your_secure_random_string_here
 
-EMAIL_USER=junyaokh822@gmail.com
-EMAIL_PASS=kipljvlqfnqtyxdc
+EMAIL_USER=your_email@example.com
+EMAIL_PASS=your_email_password_or_app_password
 BASE_URL=http://localhost:5500
